<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.jayxu</groupId>
    <artifactId>eureka-server-docker</artifactId>
    <version>1.0.0</version>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.4</version>
    </parent>
    <properties>
        <java.version>17</java.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
        </dependency>
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>2023.0.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.codehaus.jettison</groupId>
                <artifactId>jettison</artifactId>
                <version>1.5.4</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>33.1.0-jre</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>io.github.git-commit-id</groupId>
                <artifactId>git-commit-id-maven-plugin</artifactId>
                <configuration>
                    <failOnNoGitDirectory>false</failOnNoGitDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>io.fabric8</groupId>
                <artifactId>docker-maven-plugin</artifactId>
                <version>0.44.0</version>
                <configuration>
                    <verbose>true</verbose>
                    <images>
                        <image>
                            <name>mustangxu/eureka-server</name>
                            <build>
                                <tags>
                                    <tag>latest</tag>
                                    <tag>%v-${git.commit.id.abbrev}</tag>
                                </tags>
                                <from>bellsoft/liberica-runtime-container:jre-17-slim-musl</from>
                                <workdir>/app</workdir>
                                <entryPoint>
                                    <exec>
                                        <arg>java</arg>
                                        <arg>-Xmx1G</arg>
                                        <arg>--enable-preview</arg>
                                        <arg>-XX:+UnlockExperimentalVMOptions</arg>
                                        <arg>-XX:+UseZGC</arg>
                                        <arg>-jar</arg>
                                        <arg>${project.artifactId}-${project.version}.jar</arg>
                                    </exec>
                                </entryPoint>
                                <assemblies>
                                    <assembly>
                                        <descriptorRef>artifact</descriptorRef>
                                        <targetDir>/app</targetDir>
                                    </assembly>
                                </assemblies>
                                <ports>
                                    <port>8761</port>
                                </ports>
                            </build>
                        </image>
                    </images>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>spring-milestones</id>
            <url>https://repo.spring.io/milestone</url>
        </repository>
    </repositories>
</project>
